--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -1,5 +1,3 @@
-{% set shareSources = sources is null ? ['facebook','twitter','linkedin'] : sources %}
-{% set emailShare = email is sameas(false) ? false : (email is null ? true : email) %}
 {% set copyShare = copy is sameas(false) ? false : (copy is null ? true : copy) %}
 {% set visible = visibility is not empty ? visibility : 'visible' %}
 {% set isFlat = inline is sameas(false) ? false : (inline is null ? false : inline) %}
@@ -14,56 +12,39 @@
   })]) %}
 {% endif %}
 
-{% if 'facebook' in shareSources %}
-  {% set items = items|merge([include("@bolt-components-link/link.twig", {
-    text: "Facebook",
-    url: "#fb",
-    icon: {
-      name: "facebook-solid",
-      position: "before",
-      size: 'medium'
-    },
-    attributes: create_attribute(imageAttributes | default({})).addClass('js-bolt-share__facebook')
-  })]) %}
-{% endif %}
+{% for source in sources %}
+  {% set sourceTarget = '_blank' %}
 
-{% if 'twitter' in shareSources %}
-  {% set items = items|merge([include("@bolt-components-link/link.twig", {
-    text: "Twitter",
-    url: "#tw",
-    icon: {
-      name: "twitter",
-      position: "before",
-      size: 'medium'
-    },
-    attributes: create_attribute(imageAttributes | default({})).addClass('js-bolt-share__twitter')
-  })]) %}
-{% endif %}
+  {% if 'facebook' == source.name %}
+    {% set sourceName = 'Facebook' %}
+    {% set sourceIcon = 'facebook-solid' %}
+  {% elseif 'twitter' == source.name  %}
+    {% set sourceName = 'Twitter' %}
+    {% set sourceIcon = 'twitter' %}
+  {% elseif 'linkedin' == source.name  %}
+    {% set sourceName = 'LinkedIn' %}
+    {% set sourceIcon = 'linkedin' %}
+  {% elseif 'email' == source.name  %}
+    {% set sourceName = 'Email' %}
+    {% set sourceIcon = 'email' %}
+    {% set sourceTarget = '_self' %}
+  {% else %}
+    {% set sourceName = false %}
+  {% endif %}
 
-{% if 'linkedin' in shareSources %}
-  {% set items = items|merge([include("@bolt-components-link/link.twig", {
-    text: "LinkedIn",
-    url: "#li",
-    icon: {
-      name: "linkedin",
-      position: "before",
-      size: 'medium'
-    },
-    attributes: create_attribute(imageAttributes | default({})).addClass('js-bolt-share__linkedin')
-  })]) %}
-{% endif %}
-
-{% if emailShare %}
-  {% set items = items|merge([include("@bolt-components-link/link.twig", {
-    text: "Email",
-    url: "#email",
-    icon: {
-      name: "email",
-      position: "before",
-      size: 'medium'
-    }
-  })]) %}
-{% endif %}
+  {% if sourceName %}
+    {% set items = items|merge([include("@bolt-components-link/link.twig", {
+      text: sourceName,
+      url: source.url,
+      icon: {
+        name: sourceIcon,
+        position: "before",
+        size: 'medium'
+      },
+      attributes: create_attribute(imageAttributes | default({})).addClass('js-bolt-share__'~source.name).setAttribute('target',sourceTarget)
+    })]) %}
+  {% endif %}
+{% endfor %}
 
 {% if copyShare %}
   {% set items = items|merge([include("@bolt-components-copy-to-clipboard/copy-to-clipboard.twig", {
