Share -- Refactored visibility param to boolean

--- a/packages/components/bolt-share/src/share.scss
+++ b/packages/components/bolt-share/src/share.scss
@@ -5,6 +5,10 @@
 \* ------------------------------------ */
 
 .c-bolt-share {
+  &--hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
   .c-bolt-link__icon [name='facebook-solid'] {
     color: bolt-color(social, facebook);
   }
