--- a/packages/components/bolt-share/src/share.scss
+++ b/packages/components/bolt-share/src/share.scss
@@ -35,7 +35,13 @@
   }
 
   .c-bolt-block-list__item {
+    display: table; // fixes the odd 1px line that appears only at some resolutions
+    width: 100%;
     margin: 0;
+  }
+
+  bolt-copy-to-clipboard { // This is ONLY in context of this share component because we need this element to fill the full space allotted
+    display: block;
   }
 
   .c-bolt-link { // nested since this is a component within a component with different styles
