--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -98,3 +98,7 @@
     {% endif %}
   {% endblock %}
 </bolt-image>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-image'].schema, _self) | raw }}
+{% endif %}
