--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -9,7 +9,7 @@
 {% set placeholderColor = imageDataTwig.color|default('hsl(233, 33%, 97%)') %}
 {% set placeholderImage = imageDataTwig.base64|default(placeholderDummySrc) %}
 {% set sizes = sizes | default("auto") %}
-{% set srcset = src %}
+{% set srcset = srcset|default(src) %}
 {% if imageDataBolt.srcset %}
   {% set srcset = imageDataBolt.srcset %}
 {% endif %}
@@ -98,3 +98,7 @@
     {% endif %}
   {% endblock %}
 </bolt-image>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-image'].schema, _self) | raw }}
+{% endif %}
