Share / Tooltip -- Added count prop to tooltip (via share implementation) and first round of bounce up animations per count

--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -80,7 +80,8 @@
       }),
       position: "up",
       noWrap: true,
-      spacing: "none"
+      spacing: "none",
+      attributes: create_attribute(attributes|default({})).setAttribute('count',items|length)
     } only %}
   </div>
 </bolt-share>
