--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -8,7 +8,8 @@
   {% set items = items|merge([include("@bolt-components-headline/text.twig", {
     text: "Share",
     transform: 'uppercase',
-    weight: 'bold'
+    weight: 'bold',
+    attributes: create_attribute(attributes|default({})).addClass('u-bolt-color-orange c-bolt-share--inline-heading')
   })]) %}
 {% endif %}
 
@@ -56,33 +57,39 @@
 {% set classes = [
   'c-bolt-share',
   visibility is sameas(false) ? 'c-bolt-share--hidden',
-  isFlat is sameas(false) ? 'c-bolt-share--normal-layout'
+  isFlat is sameas(false) ? 'c-bolt-share--normal-layout' : 'c-bolt-share--inline-layout'
 ] %}
 
 <bolt-share>
   <div {{ attributes.addClass(classes) }}>
-    {% include "@bolt-components-tooltip/tooltip.twig" with {
-      trigger: {
-        type: "button",
-        text: "Share",
-        transform: "uppercase",
-        icon: {
-          name: "share1",
-          size: "medium"
+    {% if isFlat is sameas(false)  %}
+      {% include "@bolt-components-tooltip/tooltip.twig" with {
+        trigger: {
+          type: "button",
+          text: "Share",
+          transform: "uppercase",
+          icon: {
+            name: "share1",
+            size: "medium"
+          },
+          toggle: {
+            text: "Close",
+            name: "close-solid"
+          }
         },
-        toggle: {
-          text: "Close",
-          name: "close-solid"
-        }
-      },
-      content: include ("@bolt-components-block-list/block-list.twig", {
-      "contentItems" : items
-      }),
-      position: "up",
-      noWrap: true,
-      spacing: "none",
-      attributes: create_attribute(attributes|default({})).setAttribute('count',items|length)
-    } only %}
+        content: include ("@bolt-components-block-list/block-list.twig", {
+        "contentItems" : items
+        }),
+        position: "up",
+        noWrap: true,
+        spacing: "none",
+        attributes: create_attribute(attributes|default({})).setAttribute('count',items|length)
+      } only %}
+    {% else %}
+      {% include "@bolt-components-block-list/block-list.twig" with {
+        contentItems : items
+      } only %}
+    {% endif %}
   </div>
 </bolt-share>
 
