--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -231,6 +231,7 @@
         { text: "@bolt/components-background" },
         { text: "@bolt/components-background-shapes" },
         { text: "@bolt/components-band" },
+        { text: "@bolt/components-block-list" },
         { text: "@bolt/components-blockquote" },
         { text: "@bolt/components-breadcrumb" },
         { text: "@bolt/components-button" },
@@ -238,10 +239,12 @@
         { text: "@bolt/components-card" },
         { text: "@bolt/components-chip" },
         { text: "@bolt/components-chip-list" },
+        { text: "@bolt/components-copy-to-clipboard" },
         { text: "@bolt/components-device-viewer" },
         { text: "@bolt/components-figure" },
-        { text: "@bolt/components-icon" },
+        { text: "@bolt/components-form" },
         { text: "@bolt/components-headline" },
+        { text: "@bolt/components-icon" },
         { text: "@bolt/components-image" },
         { text: "@bolt/components-link" },
         { text: "@bolt/components-logo" },
@@ -249,11 +252,12 @@
         { text: "@bolt/components-ordered-list" },
         { text: "@bolt/components-page-footer" },
         { text: "@bolt/components-page-header" },
-        { text: "@bolt/components-site" },
-        { text: "@bolt/components-smooth-scroll" },
+        { text: "@bolt/components-share" },
         { text: "@bolt/components-sticky" },
         { text: "@bolt/components-teaser" },
-        { text: "@bolt/components-unordered-list" }
+        { text: "@bolt/components-tooltip" },
+        { text: "@bolt/components-unordered-list" },
+        { text: "@bolt/components-video" }
       ] %}
       {% if listComponents|length > 0 %}
         {% include "@bolt-components-chip-list/chip-list.twig" with {
