--- a/apps/standalone-video-player/templates/pw-video-player.twig
+++ b/apps/standalone-video-player/templates/pw-video-player.twig
@@ -1,16 +1,18 @@
-<h1>{{ page.meta.title }}</h1>
-<h2>{{ page.meta.subtitle }}</h2>
-{{ console_log(_context) }}
+{% extends "./site.twig" %}
 
-{% include "@bolt/_video-inline-script.twig" with {
-  socialUrl: "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
-} %}
+{% block content %}
+  <h1>{{ page.meta.title }}</h1>
+  <h2>{{ page.meta.subtitle }}</h2>
+  {{ console_log(_context) }}
 
-{% include "@bolt/button.twig" with {
-  text: "Watch Video",
-  tag: "button",
-  attributes: {
-    "on-click": "toggle",
-    "on-click-target": "pega-video-5205361615001"
-  }
-} only %}
+  {% include "@bolt/video.twig" with {
+    "videoId": "5609376179001",
+    "accountId": "1900410236",
+    "playerId": "r1CAdLzTW",
+    "attributes": {
+      "class": [
+        "js-brightcove-player-1"
+      ]
+    }
+  } %}
+{% endblock content %}
