--- a/apps/standalone-video-player/templates/pw-video-player.twig
+++ b/apps/standalone-video-player/templates/pw-video-player.twig
@@ -5,7 +5,7 @@
   <h2>{{ page.meta.subtitle }}</h2>
   {{ console_log(_context) }}
 
-  {% include "@bolt/video.twig" with {
+  {% include "@bolt-components-pw-video/video.twig" with {
     "videoId": "5609376179001",
     "accountId": "1900410236",
     "playerId": "r1CAdLzTW",
