--- a/apps/pattern-lab/src/styles/_docs.scss
+++ b/apps/pattern-lab/src/styles/_docs.scss
@@ -106,6 +106,15 @@
   }
 }
 
+.c-bolt-docs__readme {
+  a {
+    color: var(--bolt-theme-link-default, var(--bolt-theme-link, #545da6));
+
+    &:hover {
+      color: var(--bolt-theme-link-hover, var(--bolt-theme-link, #545da6))
+    }
+  }
+}
 
 .c-bolt-docs__page-nav {
   -ms-grid-row: 2; /* [1] */
