Block List / Share -- Updated 'contentItems' to 'items'

--- a/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
@@ -1,7 +1,7 @@
 {% set schema = get_data('@bolt-components-block-list/block-list.schema.yml') %}
 {% set code %}{% verbatim %}
 {% include "@bolt-components-block-list/block-list.twig" with {
-  "contentItems" : [
+  "items" : [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
       url: "#",
