--- a/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
@@ -5,7 +5,7 @@
   {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
       {% include "@bolt-components-block-list/block-list.twig" with {
-        "contentItems" : [
+        "items" : [
           include("@bolt-components-link/link.twig", {
             text: "Link 1",
             url: "#",
