--- a/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
@@ -1,5 +1,5 @@
 {% include "@bolt-components-block-list/block-list.twig" with {
-  "contentItems" : [
+  "items" : [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
       url: "#",
