Share > OG Share Meta Data (#552)
* Docs - 'Adding a new component' initial commit

* Share -- Documentation updates

* Share -- Added base files/assets for new component within PL and the new component package

* Schema Docs Templates - Updated the default value check to show "True" or "False" instead of "1" and blank

* Share - WIP main share component work

* Block List - NEW component (including PL docs and demos)

* Tooltip - NEW component initial work / commit

* Tooltip - Isolated "button" type specific functionality

* Tooltip - Added button wrappers and button/text conditional render

* Tooltip - Removed state and state handlers in favor of simple add class method

* Tooltip - Added more props and minor adjustments

* Tooltip - Completed added props for MVP

* Tooltip - Completed basic demos, schema, and updated readme

* Tooltip - Schema validation added

* Tooltip - CSS keyframe animations for bounceDown and bounceUp

* added missed files to commit

* Tooltip - Bring in new work in bolt-shadow and bolt-z-index

* Tooltip - Added fix for different toggle text lengths

* Tooltip - Added styling fixes IE11 and FireFox

* Share -- Updated param name

* Copy to Clipboard - WIP structure, styling, and JS

* Copy to Clipboard - Complete structure, styling, and JS

* Copy to Clipboard - added conditional message if inside iframe (demo only works outside an iframe)

* Copy to Clipboard - added comments to JS

* Copy to Clipboard - Added default values to twig file, added schema and validation, updated docs demo

* Share - updated package.json dependencies

* Share - updated package.json dependencies

* Tooltip - Added transform key to button trigger

* Updates to Tooltip component and WIP on Share component

* Tooltip - minor scss change to force the ability to click elements within the tooltip

* Share - WIP twig structuring and logic

* Block List - attribute structural adjustment for plain text items

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -1,11 +1,14 @@
 {% set assets = get_data("@bolt-assets/bolt-webpack-manifest.json") %}
 
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-    <title>Bolt Design System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
+    <title>Bolt Design System</title>
+
+    <!-- Default OG Tag examples (related to Bolt Share Component) -->
+    {% include "@bolt-components-share/src/_share-meta-example.twig" %}
 
     <link rel="stylesheet" href="{{ assets["bolt-global.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
 
