--- a/apps/pattern-lab/src/_patterns/02-components/share/10-share-inline.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/10-share-inline.twig
@@ -1,4 +1,4 @@
-<div style="margin: 0 auto; width: 150px; padding: 25rem 0 0;">
+<div style="padding: 5rem;">
 {% include '@bolt-components-share/share.twig' with {
   sources: [
     {
@@ -17,6 +17,7 @@
       name: "email",
       url: "mailto:?&body=Sample%20Text%20--%20https%3A//bolt-design-system.com"
     }
-  ]
+  ],
+  inline: true
 } only %}
 </div>
