--- a/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
@@ -2,10 +2,24 @@
 {% set code %}
   {% verbatim %}
     {% include '@bolt-components-share/share.twig' with {
-      sources: ['facebook','twitter','linkedin'],
-      email: true,
-      copy: true,
-      visibility: 'visible'
+      sources: [
+        {
+          name: "facebook",
+          url: "https://www.facebook.com/sharer/sharer.php?u={url}&src=sdkpreparse"
+        },
+        {
+          name: "twitter",
+          url: "https://twitter.com/intent/tweet?url={url}&text={title}&via={via}&hashtags={hashtags}"
+        },
+        {
+          name: "linkedin",
+          url: "https://www.linkedin.com/shareArticle?url={url}&title={title}"
+        },
+        {
+          name: "email",
+          url: "mailto:?&body=Sample%20Text%20--%20https%3A//bolt-design-system.com"
+        }
+      ]
     } only %}
   {% endverbatim %}
 {% endset %}
