hotfix: update Bolt Core's environmental check to treat polyfilled browsers the same as natively supported browsers; update Ratio object selector to work around differences in rendered HTML structure

--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -23,7 +23,7 @@ bolt-ratio {
   * 1. Fallback selector if JS isn't disabled, but hasn't kicked in yet.
   * 2. Fallback selector for browsers not supporting ::slotted(*) selector
   */
-bolt-ratio > *,
+bolt-ratio *,
 .o-bolt-ratio__inner {
   position: absolute;
   top: 0;
