change element name of bolt component

--- a/apps/pw-site/templates/pw-video-player.twig
+++ b/apps/pw-site/templates/pw-video-player.twig
@@ -6,6 +6,7 @@
   {{ console_log(_context) }}
 
   {% include "@bolt-components-video/video.twig" with {
+    "customElementName": "bolt-pw-video",
     "videoId": "5609376179001",
     "accountId": "1900410236",
     "playerId": "r1CAdLzTW",
