change scss and js classes

--- a/packages/components/bolt-video/src/video.twig
+++ b/packages/components/bolt-video/src/video.twig
@@ -1,4 +1,4 @@
-{% set prefix = "c-bolt-" %}
+{% set prefix = "c-bolt-pw-" %}
 
 {% set videoUuid = videoUuid | default("js-bolt-video-uuid--" ~ random()) %}
 
