--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -5,10 +5,10 @@
 @import 'videojs-enhancements';
 
 // Same as max-width of wrapper container
-$bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
+$bolt-pw-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 
-bolt-video {
+bolt-pw-video {
   display: block;
   width: 100%;
 
@@ -18,7 +18,7 @@ bolt-video {
   &:hover,
   &.is-playing,
   &:hover.is-paused {
-    bolt-video-meta {
+    bolt-pw-video-meta {
       transform: translate3d(0, 100%, 0);
       opacity: 0;
     }
@@ -65,7 +65,7 @@ bolt-video {
   * doesn't spill outside of the video container in IE 11 /
   * on Windows
   */
-.c-bolt-video {
+.c-bolt-pw-video {
 
   width: 100%;
   max-width: none;
@@ -77,7 +77,7 @@ bolt-video {
     height: 100%;
   }
 
-  &.c-bolt-video--background {
+  &.c-bolt-pw-video--background {
     display: block;
     position: relative;
     max-width: calc(100% - #{bolt-spacing(large)});
@@ -101,7 +101,7 @@ bolt-video {
 
 
 
-.c-bolt-video__close-button {
+.c-bolt-pw-video__close-button {
   color: bolt-color(orange);
   --bolt-theme-icon: bolt-color(orange);
   position: absolute;
@@ -134,42 +134,42 @@ bolt-video {
   }
 }
 
-.c-bolt-video__close-button--icon-to-text {
+.c-bolt-pw-video__close-button--icon-to-text {
   @media (max-width: (bolt-breakpoint(small) - 1px)) {
     display: block;
     position: relative;
     right: 0;
     text-align: right;
-    .c-bolt-video__close-button-icon {
+    .c-bolt-pw-video__close-button-icon {
       display: none;
     }
   }
   @media (min-width: bolt-breakpoint(small)) {
     position: absolute;
-    .c-bolt-video__close-button-text {
+    .c-bolt-pw-video__close-button-text {
       @include bolt-visuallyhidden;
     }
   }
 }
 
-.c-bolt-video__close-button:not(.c-bolt-video__close-button--icon-to-text) {
-  .c-bolt-video__close-button-text {
+.c-bolt-pw-video__close-button:not(.c-bolt-pw-video__close-button--icon-to-text) {
+  .c-bolt-pw-video__close-button-text {
     @include bolt-visuallyhidden;
   }
 }
 
-.c-bolt-video__close-button-icon,
-.c-bolt-video__close-button-text {
+.c-bolt-pw-video__close-button-icon,
+.c-bolt-pw-video__close-button-text {
   cursor: pointer;
 }
 
-.c-bolt-video__close-button-text {
+.c-bolt-pw-video__close-button-text {
   color: bolt-color(white);
   text-decoration: underline;
 }
 
 
-.c-bolt-video--hide-controls {
+.c-bolt-pw-video--hide-controls {
   .video-js .vjs-control-bar {
     display: none;
   }
