--- a/packages/components/bolt-sticky/src/sticky.scss
+++ b/packages/components/bolt-sticky/src/sticky.scss
@@ -11,7 +11,7 @@ bolt-sticky {
 .c-bolt-sticky {
   display: block;
   position: sticky;
+  z-index: bolt-z-index('navFixed');
   top: 0;
   width: 100%;
-  z-index: z('navFixed');
 }
