--- a/packages/components/bolt-dropdown/_dropdown-item.twig
+++ b/packages/components/bolt-dropdown/_dropdown-item.twig
@@ -23,7 +23,9 @@
 
     <div class="c-bolt-dropdown__content">
       <div class="c-bolt-dropdown__content-inner">
-        {{ content }}
+        {% block content %}
+          {{ _content }}
+        {% endblock %}
       </div>
     </div>
   </div>
