Fix Ratio Object Hotfix

--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -26,7 +26,8 @@ bolt-ratio {
   * 1. Fallback selector if JS isn't disabled, but hasn't kicked in yet.
   * 2. Fallback selector for browsers not supporting ::slotted(*) selector
   */
-bolt-ratio *,
+bolt-ratio > *,
+bolt-ratio img,
 .o-bolt-ratio__inner {
   position: absolute;
   top: 0;
