hotfix: correctly previous ratio object hotfix

--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -24,6 +24,7 @@ bolt-ratio {
   * 2. Fallback selector for browsers not supporting ::slotted(*) selector
   */
 bolt-ratio > *,
+bolt-ratio img,
 .o-bolt-ratio__inner {
   position: absolute;
   top: 0;
