chore: update to use latest manifest updates from master

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="{{ assets["bolt-global.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="{{ assets["pl.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
 
 
     {# @TODO: wire this up to use Critical CSS #}
